rnsc/test_data/rns_integration/error/parser/package_directive/trailing_tokens.rns
; Tests that trailing tokens after .package are detected and reported.
; Expected error: E-029 (package trailing tokens)
; The parser should detect 'trailing_tokens' as unexpected after the package name.

.class public MyClass
.super java/lang/Object
.package com.example trailing_tokens

.class_end
